# poly

./: README.md  pyproject.toml  requirements.txt
btcfm/: config.py  infer.py  logging_utils.py  preflight.py  train.py
btcfm/data/: bars.py  coinbase_rest.py  coinbase_ws.py  dataset.py  historical.py  schema.py
btcfm/features/: builders.py  normalise.py
btcfm/markets/: polymarket.py
btcfm/model/: encoder.py  flow_matching.py  sampler.py  training.py  velocity.py
btcfm/runtime/: __init__.py  preflight.py
btcfm/verification/: crps.py  rank_hist.py  reliability.py  spread_skill.py
configs/: default.yaml  small.yaml
outputs/baselines/synthetic_small/: BASELINE.md
runs/smoke/: checkpoint_000100.pkl  checkpoint_000200.pkl  checkpoint_best.pkl
runs/smoke3/: checkpoint_000100.pkl  checkpoint_best.pkl  train.jsonl
runs/smoke_s3/: checkpoint_000200.pkl  run_metadata.json  train.jsonl
scripts/: plot_run.py  plot_synthetic_diagnostics.py  run_backtest.py  run_live_ingest.py  run_train.py  run_verification.py  setup_ccub.sh
scripts/qsub/: smoketest_gpu.sh  train_default.sh  verify.sh
scripts/sbatch/: smoketest_gpu.sh  train_default.sh  verify.sh
tests/: test_bars.py  test_dataset.py  test_features.py  test_flow_matching.py  test_historical.py  test_precision.py  test_verification.py
