[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btcfm"
version = "0.1.0"
description = "Conditional flow-matching for intraday BTC/USD probabilistic forecasting"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.26",
    "jaxlib>=0.4.26",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "numpy>=1.26",
    "polars>=1.40,<2",
    "pyarrow>=14.0,<18.0",
    "requests>=2.31",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["btcfm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
